Fixed issue with extra whitespace at bottom

--- a/resources/stylesheets/styles.css
+++ b/resources/stylesheets/styles.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0;
-}
-
 body {
     font-family: Helvetica, sans-serif;
     font-size: 22px;
@@ -112,6 +108,7 @@ h2 {
     margin: 0px auto;
 }
 
+/* Using relative offsets the positions of elements however the page still things the space you have offset from is still occupied hence why it leaves space for the divs.*/
 #locationtext {
     margin: 0px auto;
     width: 1000px;
@@ -120,8 +117,16 @@ h2 {
     justify-content: space-around;
     align-items: center;
     opacity: 1;
-    position: relative;
-    top: -500px
+    /*position: relative;*/
+    /* top: -500px; */
+    background-image: url("/resources/media/img-locations-background.webp");
+    /* this replaces the img tag so your elements arent being pushed down the page */
+    padding: 10em;
+    /* this gives the image the space around the edges */
+    background-repeat: no-repeat;
+    /* stops the image from showing multiple of the same image */
+    background-position: 50%;
+    /* pushes the image 50% (half way) to the right to make it centered */
 }
 
 .locations {
@@ -131,19 +136,18 @@ h2 {
     min-height: 300px;
     width: 300px;
     line-height: 50px;
-    position: relative;
+}
+
+#teacozy {
+    background: black;
 }
 
 #footer {
-    position: relative;
-    top: -300px;
     height: 200px;
     line-height: 50px;
 }
 
 footer {
-    position: relative;
-    top: 600px;
     margin-left: 20px;
     text-align: left;
 }
